Home page banner gap padding fix

--- a/theme/static/assets/css/templatemo-stand-blog.css
+++ b/theme/static/assets/css/templatemo-stand-blog.css
@@ -57,7 +57,7 @@ h6 {
 }
 
 .heading-page {
-	padding-top: 110px;
+	padding-top: 20px;
 }
 
 .page-heading {
